# sdlc-agent

./: .env.example  .gitignore  LICENSE  README.md  async_python_report.md  fib.py  fibonacci.py  main.py  pyproject.toml  python_files_report.md  requirements.txt  server.py  task_manager_review_report.md  test.py
.chroma_feedback/: chroma.sqlite3
.deepeval/: .deepeval_telemetry.txt
docs/: ORCHESTRATOR_REVIEW.md  async_and_src_inventory_report.md  combined_report.md  mcp_test_assessment.md
frontend/: package-lock.json  package.json
scripts/: cleanup_routing_prompts.py  sdk_demo.py  sdk_finance_demo.py  sdk_sdlc20_demo.py  smoke_all_teams.py  verify_patches.py
src/: config.py  hitl.py  orchestrator.py
src/agents/: definitions.py  finance_prompts.py  prompts.py
src/db/: database.py  models.py
src/evaluation/: evaluator.py  golden.py  golden_dataset.json  golden_dataset.v4.json.bak  golden_dataset_finance.json  integrations.py  judge_ab.py  llm_judge.py  metrics.py  rca.py  regression.py  reporter.py  (+1 more)
tests/: README.md  __init__.py  discount_utils.py  test_async_parallelism.py  test_dates.py  test_discount.py  test_evaluation.py  test_fib.py  test_filesystem_absolute_path.py  test_mcp_communication.py  test_narration_and_hitl_guards.py  test_optimizer_decision_tree.py  test_orchestrator.py  test_rag.py  test_rag_golden.py  test_rag_pipeline.py  test_read_dedup_and_plan_handoff.py  test_retry.py  test_router_tool_coverage.py  test_tool_retry.py  test_validate.py  test_workflow_executor.py
utils/: __init__.py  dates.py  fib.py  retry.py  validate.py
(+72 files in other folders)
