[project]
name = "sdlc-agent"
version = "0.1.0"
description = "Multi-agent SDLC assistant with MCP tool integration, LangGraph orchestration, and automated evaluation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
